--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test.karma.reporter",
+  "name": "karma-test-reporter",
   "version": "0.0.0-SNAPSHOT",
   "description": "Testing karma reporter",
   "main": "index.js",
